update java version in pom.xml